ligolang/src/test/contracts/negative/error_function_annotation_2.mligo
let f : int = fun (x, y : int*int) -> x + y
let g (x, y : int * int) : int = f (x, y)
